# hiring-assistant

./: .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml  temp.py
.github/workflows/: style.yml
agents/: extract_content_from_resume.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py  watchers.py
baml_src/: extract_content_from_resume.baml
endpoints/: __init__.py
endpoints/agent_endpoints/: resume_extraction.py
endpoints/crud_endpoints/: candidate_auth.py  org_user_auth.py
models/: generate_embeddings.py  qdrant_mixin.py  schemas.py
settings/: __init__.py  settings.py
utils/: auth.py  ocr_service.py  upload_to_s3.py
